src/objects/Volunteer_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Volunteer_Role_Name__c</fullName>
        <description>This field indicate about  the Volunteer role.</description>
        <label>Volunteer Role Name</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory Committee, non-voting Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Greeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celebrity Host</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Outreach Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Day Event Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker&apos;s Bureau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Events - Committee Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Events - Day of Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Translator &amp; Interpreter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wish Assist Phone Greeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wish Assist Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wish Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wish Granter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wish Granter Mentor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Waiting_Since__c</fullName>
        <description>It will display waiting since value</description>
        <formula>Wish__r.Contact.Waiting_Since__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Waiting Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wish_Child__c</fullName>
        <formula>Wish__r.Contact.Hidden_First_Name__c &amp; &quot; &quot; &amp; Wish__r.Contact.Hidden_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wish Child</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds the  related Case</description>
        <label>Wish</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Volunteer_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>It will display the zip code value</description>
        <formula>Wish__r.Contact.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <label>Volunteer Opportunity</label>
    <listViews>
        <fullName>Alabama_Volunteer_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>Alabama</label>
        <queue>Alabama</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alaska_Washington_Volunteer_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>Alaska &amp; Washington</label>
        <queue>Alaska_Washington</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Arizona_Volunteer_Opportunity</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Chapter_Name__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish Arizona</value>
        </filters>
        <label>Arizona</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_California_Volunteer_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>Central California</label>
        <queue>Central_California</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_New_York_Volunteer_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>Central New York</label>
        <queue>Central_New_York</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Northern_Florida_Volunteer_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>Central &amp; Northern Florida</label>
        <queue>Central_Northern_Florida</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_South_Texas_Volunteer_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>Central &amp; South Texas</label>
        <queue>Central_South_Texas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Western_North_Carolina_Volunteer_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>Central &amp; Western North Carolina</label>
        <queue>Central_Western_North_Carolina</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Colorado_Volunteer_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>Colorado</label>
        <queue>Colorado</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Connecticut_Volunteer_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>Connecticut</label>
        <queue>Connecticut</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>East_Tennessee_Volunteer_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>East Tennessee</label>
        <queue>East_Tennessee</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Eastern_North_Carolina_Volunteer_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>Eastern North Carolina</label>
        <queue>Eastern_North_Carolina</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Georgia_Volunteer_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>Georgia</label>
        <queue>Georgia</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Greater_Bay_Area_Volunteer_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>Greater Bay Area</label>
        <queue>Greater_Bay_Area</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Greater_Los_Angeles_Volunteer_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>Greater Los Angeles</label>
        <queue>Greater_Los_Angeles</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>VR-{00000}</displayFormat>
        <label>Volunteer Opportunity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Opportunities</pluralLabel>
    <recordTypes>
        <fullName>Non_Wish_Event</fullName>
        <active>true</active>
        <description>This record type would associate the volunteer to non wish and event</description>
        <label>Non Wish &amp; Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volunteer_Registered_Non_Wish</fullName>
        <active>true</active>
        <description>This Record type is assigned to volunteer.Who are all registered for the non wish.</description>
        <label>Volunteer Registered Non Wish</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volunteer_Registered_Wish</fullName>
        <active>true</active>
        <description>This Record type is assigned to volunteer for who are all registered for the wish.</description>
        <label>Volunteer Registered Wish</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wish</fullName>
        <active>true</active>
        <description>This record type would associate the volunteer to the wish</description>
        <label>Wish</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>Grant_Edit_Access_to_assigned_Volunteer__c</fullName>
        <label>Grant Edit Access to assigned Volunteer</label>
    </sharingReasons>
    <validationRules>
        <fullName>Vol_Opp_Do_Not_Create_for_Closed_Wish</fullName>
        <active>true</active>
        <description>Should not create volunteer opportunity for Closed Wish.</description>
        <errorConditionFormula>Wish__r.IsClosed=True &amp;&amp; ISNEW() &amp;&amp; $Profile.Name  != &apos;Integration&apos;</errorConditionFormula>
        <errorMessage>You cannot create volunteer opportunity for closed wish.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Volunteer_Opp_Reason_Inactive</fullName>
        <active>true</active>
        <description>This rule will fire if the if Reason Inactive is null when Inactive is checked.</description>
        <errorConditionFormula>AND(Inactive__c = true,ISBLANK(TEXT(Reason_Inactive__c )))</errorConditionFormula>
        <errorMessage>Please enter the value for Reason Inactive</errorMessage>
    </validationRules>
</CustomObject>